# TEIA

./: .gitignore  README.md  generate_augdata.py  generate_fulldataset.py  main.py  pyproject.toml
ipynb/: MIMC-Case-Study.ipynb  load_training_data.ipynb
research/config/: base_config.py  eia_config.py
research/data/: data_loader.py  data_prepare.py  data_processing.py
research/model/: adv_attack_model.py  attack_model.py
research/utils/: eval.py  generation.py  optim.py  toolbox.py
