[tool.poetry]
name = "research"
version = "0.1.0"
description = ""
authors = ["coffree <02320013apis@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^1.25.0"
tqdm = "^4.65.0"
yake = "^0.4.8"
keybert = "^0.7.0"
datasets = "^2.13.0"
torch = {url = "https://download.pytorch.org/whl/cu113/torch-1.12.1%2Bcu113-cp39-cp39-linux_x86_64.whl"}
pre-commit = "^3.3.3"
pylint = "^2.17.4"
pynvml = "^11.5.0"
sentence-transformers = "^2.2.2"
gensim = "^4.3.1"
ipykernel = "^6.23.3"
evaluate = "^0.4.0"
rouge-score = "^0.1.2"
nltk = "^3.8.1"
wandb = "^0.15.9"
matplotlib = "^3.7.3"
torchmetrics = "^1.2.0"
accelerate = "^0.25.0"
einops = "^0.7.0"
jinja2 = "^3.1.2"
openai = "^1.7.0"
python-dotenv = "^1.0.0"
ipdb = "^0.13.13"
textattack = "^0.3.9"
random-word = "^1.0.11"
seaborn = "^0.13.2"
beir = "^2.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
